--- a/stylua.toml
+++ b/stylua.toml
@@ -1,12 +1,4 @@
-[indentation]
-type = "Spaces"
-width = 2
-
-[line_endings]
-type = "Unix"
-
-[layout]
+indent_type = "Spaces"
+indent_width = 2
+line_endings = "Unix"
 column_width = 120
-
-[sort_requires]
-enabled = true
